style: Change color and overlow hidden

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,5 +3,6 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.7em 0.4em;
-  border-bottom: 1px solid #000;
+  background-color: #191b32;
+  border-bottom: 1px solid #808080;
 }
