--- a/src/components/Darkmode.module.css
+++ b/src/components/Darkmode.module.css
@@ -2,6 +2,7 @@
   display: flex;
   padding: 0.2em;
   font-size: 1.4em;
+  color: #fff;
   cursor: pointer;
   background-color: transparent;
   border: none;
