--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
+:root {
+  --color-bg-dark: #f5f5f5;
+  --color-bg: #fdfffd;
+  --color-grey: #d1d1d1;
+  --coor-text: #22243b;
+  --color-accent: #f16e03;
+}
+
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(81, 87, 111);
+  background: linear-gradient(
+    106deg,
+    rgba(81, 87, 111, 1) 0%,
+    rgba(60, 61, 69, 1) 100%
+  );
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
+  height: 60%;
+  background-color: var(--color-bg-dark);
+  border-radius: 1rem;
+  -moz-box-shadow: 9px 7px 20px 0 rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 9px 7px 20px 0 rgba(0, 0, 0, 0.75);
+  box-shadow: 9px 7px 20px 0 rgba(0, 0, 0, 0.75);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'source-code-pro', 'Menlo', 'Monaco', 'Consolas', 'Courier New',
     monospace;
+}
+
+ul {
+  padding-left: 0;
+  list-style: none;
 }
