style: Header component style

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --color-bg-dark: #f5f5f5;
   --color-bg: #fdfffd;
   --color-grey: #d1d1d1;
-  --coor-text: #22243b;
+  --color-text: #22243b;
   --color-accent: #f16e03;
 }
 
@@ -32,6 +32,7 @@ body {
   width: 100%;
   max-width: 500px;
   height: 60%;
+  overflow: hidden;
   background-color: var(--color-bg-dark);
   border-radius: 1rem;
   -moz-box-shadow: 9px 7px 20px 0 rgba(0, 0, 0, 0.75);
@@ -47,4 +48,9 @@ code {
 ul {
   padding-left: 0;
   list-style: none;
+}
+
+button {
+  border: none;
+  outline: none;
 }
