--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --color-text: #22243b;
   --color-accent: #f16e03;
   --color-white: #fff;
+  --color-scrollbar: #aaa7a7;
 }
 
 * {
@@ -15,6 +16,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  accent-color: var(--color-accent);
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -59,4 +61,19 @@ ul {
 button {
   border: none;
   outline: none;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-bg-dark);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-scrollbar);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-accent);
 }
